[package]
name = "webtag"
version = "0.1.0"
edition = "2024"

[dependencies]
base64 = "0.22.1"
multitag = "0.3.3"
sycamore = "0.9.1"
wasm-bindgen = "0.2.100"
wasm-bindgen-futures = "0.4.50"

[dependencies.web-sys]
version = "0.3.77"
features = [
    "HtmlInputElement",
    "FileList",
    "File",
    "Blob"
]

[lints.clippy]
pedantic = { level = "warn", priority = -1 }
wildcard_imports = "allow"
