[package]
name = "webtag"
version = "0.1.0"
edition = "2024"

[dependencies]
base64 = "0.22.1"
sycamore = "0.9.1"
wasm-bindgen = "0.2.100"
wasm-bindgen-futures = "0.4.50"

[dependencies.multitag]
git = "https://github.com/karx1/multitag"
rev = "cc12caca0ed8423605e7b0ae4c56cdc11000fd3a"


[dependencies.web-sys]
version = "0.3.77"
features = [
    "HtmlInputElement",
    "FileList",
    "File",
    "Blob"
]

[lints.clippy]
pedantic = { level = "warn", priority = -1 }
wildcard_imports = "allow"
